; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_timer.c_timeval_from_msec.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_timer.c_timeval_from_msec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @timeval_from_msec(i32 %0) #0 {
  %2 = alloca %struct.timeval, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = mul nsw i32 %5, 1000
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = sdiv i32 %7, 1000000
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* %4, align 4
  %11 = srem i32 %10, 1000000
  %12 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = bitcast %struct.timeval* %2 to i64*
  %14 = load i64, i64* %13, align 4
  ret i64 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
